@@ -30,6 +30,10 @@ Version 1.4.23 - SVN
     "$ldap_abook_allow_listing = TRUE;" (without quotes) to
     config/config_local.php (previously, this required editing of a
     file).
+  - Added ability to control browser rendering mode (quirks versus
+    standards) - see the $browser_rendering_mode setting in
+    config/config.php or the "4. General Options ==> 19. Browser
+    rendering mode" setting in the configuration tool.
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
